fix styling problems on mobile popup cards

--- a/style.css
+++ b/style.css
@@ -34,8 +34,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem;
-  position: fixed;
-  z-index: 2;
+  z-index: 0;
   background-color: var(--clr-white);
   width: 100%;
 }
@@ -43,16 +42,22 @@ body {
 .ul-cont {
   display: none;
   flex-direction: column;
-  align-items: flex-end;
   width: 100%;
   height: 100vh;
   background-color: #3145f9f3;
-  position: absolute;
+  position: fixed;
   z-index: 1;
 }
 
 .ul-cont-appear {
   display: flex;
+}
+
+.closeIcon {
+  margin-left: 90%;
+  margin-top: 10%;
+  font-size: 24px;
+  color: white;
 }
 
 .nav-link {
@@ -188,7 +193,7 @@ main {
 
 .card-block h2 {
   font-weight: 700;
-  font-size: 2.5rem;
+  font-size: 28px;
   color: #172b4d;
 }
 
@@ -420,6 +425,7 @@ textarea {
   gap: 0.8rem;
   padding: 0;
   margin-bottom: 0.5rem;
+  margin-top: 1rem;
 }
 
 .error {
@@ -521,17 +527,13 @@ textarea {
   }
 
   .popup-window {
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding: 16px;
-    gap: 12px;
-    position: absolute;
-    width: 100%;
-    height: 713px;
-    left: calc(50% - 343px / 2);
-    top: 60px;
+    width: 92%;
+    height: 95%;
+    margin-left: 4.2%;
+    margin-top: 5%;
     background: #fff;
     border: 1px solid #dfe1e6;
     border-radius: 16px;
@@ -541,15 +543,14 @@ textarea {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 0;
     gap: 12px;
     width: 100%;
     height: 40px;
+    justify-content: space-between;
   }
 
   .closeIcon-popup {
-    margin-left: 210px;
-    margin-bottom: 4rem;
+    margin-bottom: 5rem;
     color: #67798e;
   }
 
@@ -564,8 +565,9 @@ textarea {
   }
 
   .popup-img {
-    width: 100%;
+    width: 95%;
     height: 100%;
+    margin-left: 2%;
   }
 
   .popups-project-p-desktop {
@@ -584,12 +586,11 @@ textarea {
   .action {
     width: 100%;
     margin: auto;
-    margin-left: 25px;
     margin-top: 3px;
   }
 
   .overlay {
-    position: absolute;
+    position: fixed;
     left: 0;
     width: auto;
     right: 0;
@@ -597,20 +598,19 @@ textarea {
     bottom: 0;
     background: #c1c7d0;
     mix-blend-mode: multiply;
-    backdrop-filter: blur(3px);
-    z-index: -1;
+    backdrop-filter: blur(5px);
+    z-index: 1;
   }
 
   .seeSource {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 12px 5.2px;
     gap: 10px;
     position: absolute;
-    width: 136px;
     height: 48px;
-    left: 180px;
+    margin-left: 60%;
+    width: max-content;
   }
 
   .seeLive {
@@ -619,10 +619,7 @@ textarea {
     align-items: center;
     padding: 12px 15px;
     gap: 10px;
-    position: absolute;
-    width: 136px;
     height: 48px;
-    left: 30px;
   }
 
   .divider2 {
@@ -630,7 +627,9 @@ textarea {
     left: 4px;
     right: 4px;
     border: 1px solid #ebecf0;
-    margin-top: 18.3rem;
+    margin-top: 17rem;
+    width: 120%;
+    margin-left: -2%;
   }
 
   .divider {
@@ -649,6 +648,11 @@ textarea {
     height: 20px;
     background-image: url(imgs/githubVector.png);
     background-repeat: no-repeat;
+  }
+
+  .popups-project-p-mobile {
+    width: 120%;
+    margin-top: 5%;
   }
 
   .card-tags2 {
